WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174286
[WK2 iOS] During momentum scroll, getBoundingClientRect returns wrong coordinates (missing images on pinterest, elle.com and many other sites)
https://bugs.webkit.org/show_bug.cgi?id=174286
Summary
[WK2 iOS] During momentum scroll, getBoundingClientRect returns wrong coordin...
Simon Fraser (smfr)
Reported
2017-07-07 18:46:21 PDT
[WK2 iOS] During momentum scroll, getBoundingClientRect returns wrong coordinates (missing images on pinterest, elle.com and many other sites)
Attachments
Patch
(9.59 KB, patch)
2017-07-07 18:48 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews124 for ios-simulator-wk2
(939.10 KB, application/zip)
2017-07-07 20:18 PDT
,
Build Bot
no flags
Details
Patch
(12.92 KB, patch)
2017-07-10 19:58 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-07-07 18:48:49 PDT
Created
attachment 314905
[details]
Patch
Build Bot
Comment 2
2017-07-07 20:18:50 PDT
Comment on
attachment 314905
[details]
Patch
Attachment 314905
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/4074919
New failing tests: scrollingcoordinator/ios/sync-layer-positions-after-scroll.html
Build Bot
Comment 3
2017-07-07 20:18:51 PDT
Created
attachment 314912
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Simon Fraser (smfr)
Comment 4
2017-07-10 19:58:00 PDT
Created
attachment 315065
[details]
Patch
Dean Jackson
Comment 5
2017-07-10 20:00:56 PDT
Comment on
attachment 315065
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=315065&action=review
> Source/WebCore/ChangeLog:19 > + but fix the scrolling tree logic to work correctly in this cause.
Typo: cause
> LayoutTests/fast/visual-viewport/ios/get-bounding-client-rect-unstable.html:49 > + testRunner.runUIScript(simulateScrollingStart(500), function() { > + checkBoundingClientRect(-150); > + > + debug('Finishing scroll'); > + testRunner.runUIScript(simulateScrollingEnd(), function() {
Is it ok to call a UIScript from within a UIScript?
Simon Fraser (smfr)
Comment 6
2017-07-10 20:04:08 PDT
rdar://problem/32864180
Simon Fraser (smfr)
Comment 7
2017-07-10 20:42:26 PDT
https://trac.webkit.org/r219320
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug